<resources>
    <string name="app_name">ESKOOLTECH</string>
    <string name="loading">Loading...</string>
    <string name="submit">SUBMIT</string>
    <string name="login">Login</string>
    <string name="welcome_back">welcome back!</string>
    <string name="college_code">COLLEGE CODE</string>
    <string name="username">USERNAME</string>
    <string name="password">PASSWORD</string>
    <string name="forget_password">Forget password?</string>
    <string name="click_here">Click here</string>
    <string name="stay_updated_about_the_school">Stay updated about the School</string>
    <string name="about">ABOUT</string>
    <string name="reset_password">Reset Password</string>
    <string name="enter_your_new_password_below">Enter your new password below.</string>
    <string name="old_password">Old Password</string>
    <string name="decrypted_password">*******</string>
    <string name="new_password">New Password</string>
    <string name="enter_your_enrollment">Enter your enrollment</string>
    <string name="enrollment">Enrollment</string>
    <string name="title_activity_students_dashboard">StudentsDashboardActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Log Out</string>
    <string name="action_change_password">Change Password</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_dash_board">DashBoardActivity</string>
    <string name="title_activity_teacher_dash_board">TeacherDashBoardActivity</string>
    <string name="title_activity_youtube">YoutubeActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="welcome_back_title">Welcome back!</string>
    <string name="login_to_continue">Please log in to continue</string>
    <string name="select_login_type">Select login type</string>
    <string name="select_login_type_subtitle">Choose your account type to continue</string>
    <string name="type_parent">Parent</string>
    <string name="type_parent_desc">Log in as a parent or guardian</string>
    <string name="type_teacher">Teacher</string>
    <string name="type_teacher_desc">Log in as a teaching staff member</string>
    <string name="type_admin">Admin</string>
    <string name="type_admin_desc">Log in as a school administrator</string>
    <string name="hint_enter_here">Enter here</string>
    <string name="hint_new_password">Enter new password</string>
    <string name="hint_enrollment">Enter your enrollment number</string>
</resources>