<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_500"
    tools:context=".ForgetPasswordActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/password_layout"
        android:gravity="center">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:contentDescription="@string/app_name"
            android:src="@mipmap/school_logo"
            android:layout_marginBottom="@dimen/size_16"
            android:layout_centerHorizontal="true"
            android:padding="@dimen/size_8"
            android:id="@+id/image"/>

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/image"
            android:text="@string/reset_password"
            android:gravity="center"
            android:textColor="@color/purple_900"
            android:fontFamily="@font/quicksand_regular"
            android:textSize="@dimen/margin_20_sp"/>

        <TextView
            android:id="@+id/message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/title"
            android:text="@string/enter_your_new_password_below"
            android:gravity="center"
            android:textColor="@color/purple_900"
            android:fontFamily="@font/quicksand_regular"
            android:textSize="@dimen/margin_14_sp"/>

        <LinearLayout
            android:id="@+id/form"
            android:layout_below="@id/message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/size_32"
            android:orientation="vertical">

            <TextView
                android:id="@+id/otp_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/old_password"
                android:gravity="center"
                android:layout_marginBottom="@dimen/size_4"
                android:textColor="@color/purple_900"
                android:fontFamily="@font/quicksand_regular"
                android:textSize="@dimen/margin_16_sp"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/size_24"
                android:layout_marginRight="@dimen/size_24"
                android:padding="@dimen/size_4"
                android:background="@color/white">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:background="@null"
                    android:inputType="textPassword"
                    android:textColor="@color/purple_900"
                    android:hint="@string/decrypted_password"
                    android:gravity="center"
                    android:id="@+id/otp"/>
            </RelativeLayout>


            <TextView
                android:id="@+id/new_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/new_password"
                android:gravity="center"
                android:layout_marginBottom="@dimen/size_4"
                android:layout_marginTop="@dimen/size_16"
                android:textColor="@color/purple_900"
                android:fontFamily="@font/quicksand_regular"
                android:textSize="@dimen/margin_16_sp"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/size_24"
                android:layout_marginRight="@dimen/size_24"
                android:padding="@dimen/size_4"
                android:background="@color/white">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:background="@null"
                    android:inputType="textPassword"
                    android:textColor="@color/purple_900"
                    android:hint="@string/decrypted_password"
                    android:gravity="center"
                    android:id="@+id/pass_new"/>
            </RelativeLayout>


        </LinearLayout>

        <Button
            android:id="@+id/submit"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_50"
            style="@style/MyButton"
            android:backgroundTint="@color/purple_900"
            android:layout_marginLeft="@dimen/size_50"
            android:layout_marginRight="@dimen/size_50"
            android:text="@string/submit"
            android:layout_below="@id/form"
            android:textSize="@dimen/margin_20_sp"/>


    </RelativeLayout>



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/enrollment"
        android:visibility="gone"
        android:gravity="center">

        <ImageView
            android:layout_width="@dimen/size_150"
            android:layout_height="@dimen/size_150"
            android:src="@mipmap/school_logo"
            android:layout_marginBottom="@dimen/size_16"
            android:layout_centerHorizontal="true"
            android:padding="@dimen/size_8"
            android:id="@+id/image_otp"/>

        <TextView
            android:id="@+id/title_otp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/image_otp"
            android:text="@string/reset_password"
            android:gravity="center"
            android:textColor="@color/purple_900"
            android:fontFamily="@font/quicksand_regular"
            android:textSize="@dimen/margin_20_sp"/>

        <TextView
            android:id="@+id/message_otp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/title_otp"
            android:text="@string/enter_your_enrollment"
            android:gravity="center"
            android:textColor="@color/purple_900"
            android:fontFamily="@font/quicksand_regular"
            android:textSize="@dimen/margin_14_sp"/>

        <LinearLayout
            android:id="@+id/form_otp"
            android:layout_below="@id/message_otp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/size_32"
            android:orientation="vertical">

            <TextView
                android:id="@+id/enroll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/enrollment"
                android:gravity="center"
                android:textColor="@color/purple_900"
                android:fontFamily="@font/quicksand_regular"
                android:textSize="@dimen/margin_16_sp"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/size_4"
                android:layout_marginLeft="@dimen/size_24"
                android:layout_marginRight="@dimen/size_24"
                android:padding="@dimen/size_4"
                android:background="@color/white">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:background="@null"
                    android:textColor="@color/purple_900"
                    android:hint="@string/decrypted_password"
                    android:gravity="center"
                    android:id="@+id/enroll_detail"/>
            </RelativeLayout>

        </LinearLayout>

        <Button
            android:id="@+id/submit_otp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_50"
            android:layout_below="@id/form_otp"
            style="@style/MyButton"
            android:backgroundTint="@color/purple_900"
            android:layout_marginLeft="@dimen/size_50"
            android:layout_marginRight="@dimen/size_50"
            android:text="@string/submit"
            android:textSize="@dimen/margin_20_sp"/>


    </RelativeLayout>

</RelativeLayout>