<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/size_200"
    android:background="@color/purple_900"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:padding="@dimen/size_4"
        android:visibility="gone">

        <LinearLayout
            android:id="@+id/sibling_one"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <com.mikhaellopez.circularimageview.CircularImageView
                android:id="@+id/sibling_image_one"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:contentDescription="@string/nav_header_desc"
                android:src="@drawable/ic_teacher" />

            <TextView
                android:id="@+id/sibling_name_one"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/quicksand_regular"
                android:gravity="center"
                android:padding="@dimen/size_2"
                android:text="@string/nav_header_title"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/white" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/sibling_two"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <com.mikhaellopez.circularimageview.CircularImageView
                android:id="@+id/sibling_image_two"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:contentDescription="@string/nav_header_desc"
                android:src="@drawable/ic_teacher" />

            <TextView
                android:id="@+id/sibling_name_two"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/quicksand_regular"
                android:gravity="center"
                android:padding="@dimen/size_2"
                android:text="@string/nav_header_title"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/white" />

        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="bottom"
        android:orientation="vertical"
        android:padding="@dimen/size_4">

        <com.mikhaellopez.circularimageview.CircularImageView
            android:id="@+id/imageView"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:contentDescription="@string/nav_header_desc"
            android:src="@drawable/ic_teacher"
            app:civ_border_color="@color/black"
            app:civ_border_width="@dimen/size_2" />

        <TextView
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/quicksand_regular"
            android:gravity="center|start"
            android:padding="@dimen/size_2"
            android:text="@string/nav_header_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/designation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/quicksand_regular"
            android:text="@string/nav_header_subtitle"
            android:textColor="@color/white"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/sibling_layout"
            android:padding="@dimen/size_4">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/quicksand_regular"
                android:gravity="center"
                android:text="Session : "
                android:textColor="@color/white"
                android:visibility="gone" />

            <Spinner
                android:id="@+id/session"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:dropDownSelector="@color/white"
                android:gravity="start|center"
                android:scrollbars="none"
                android:spinnerMode="dropdown" />

        </LinearLayout>

    </LinearLayout>
</LinearLayout>
